# CARE

./: .gitignore  .gitlab-ci.yml  .gitmodules  .uberenv_config.json  CMakeLists.txt  CMakeLists.txt.orig  COPYRIGHT  LICENSE  NOTICE  README.md  RELEASE_NOTES.md
.github/workflows/: c-cpp.yml  ci.yml
.gitlab/: corona-jobs.yml  corona-templates.yml  corona.yml  custom-jobs-and-variables.yml  lassen-build-and-test-extra.yml  lassen-jobs.yml  lassen-templates.yml  lassen.yml  ruby-build-and-test-extra.yml  ruby-jobs.yml  ruby-templates.yml  ruby.yml  rules.yml  runners.yml  subscribed-pipelines.yml  tioga-build-and-test-extra.yml
.gitlab/ci/: helper.sh
.gitlab/jobs/: corona.yml  dane.yml  lassen.yml  poodle.yml  ruby.yml  tioga.yml  tuolumne.yml
Win32/: NatvisFile.natvis  care.rc  care.vcxproj  care.vcxproj.filters  resource.h
Win32/include/care/: config.h
benchmarks/: BenchmarkAlgorithm.cpp  BenchmarkArrayView.cpp  BenchmarkAtomics.cpp  BenchmarkForall.cpp  BenchmarkHostDeviceMap.cpp  BenchmarkNumeric.cpp  BenchmarkNumeric.cpp.orig  BenchmarkPlugin.cpp  BenchmarkRaja.cpp  CMakeLists.txt
cmake/: Setup.cmake  SetupBLTWrapper.cmake  SetupCompilerOptions.cmake  SetupDependencies.cmake  SetupLibraries.cmake  SetupMacros.cmake  SetupOptions.cmake  care-config.cmake.in
cmake/libraries/: FindBasil.cmake  FindCHAI.cmake  FindCUB.cmake  FindLLNL_GlobalID.cmake  FindNVTX.cmake  FindNvToolsExt.cmake  FindRAJA.cmake  Findumpire.cmake
cmake/modules/: FindCUB.cmake  Findcub.cmake
configs/lc/blueos/: clang14.cmake  clang15.cmake  nvcc10.1.243_clang8.0.1.cmake  nvcc10_clang12.cmake  nvcc_clang.cmake
configs/lc/blueos_3_ppc64le_ib_p9/: nvcc_clang.cmake
configs/lc/hip/: rocm-3.6-43-20200704_clang11.0.0.cmake  rznevada.cmake  rzwhamo.cmake
configs/lc/toss/: clang.cmake  clang12.cmake  rocm5.cmake
configs/lc/toss3/: clang.cmake
configs/lc/toss_3_x86_64_ib/: clang.cmake
configs/lc/toss_4_x86_64_ib/: clang.cmake  clang_tsan.cmake  intel.cmake
configs/lc/toss_4_x86_64_ib_cray/: amdclang.cmake
debug/gdb/: care-gdb.py
debug/totalview/: host_device_ptr.tvd
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: CMakeLists.txt  conf.py  data_structures.rst  index.rst  infrastructure.rst  install.rst  loop_fuser.rst  tutorial.rst
examples/: CMakeLists.txt  DeviceASAN.cpp  RaceConditions.cpp  ScanLoop.cpp  StreamLoop.cpp
host-configs/lc/blueos_3_ppc64le_ib_p9/: nvcc_clang.cmake
host-configs/lc/toss_4_x86_64_ib/: clang.cmake  clang_tsan.cmake  intel.cmake  nvcc_clang.cmake
host-configs/lc/toss_4_x86_64_ib_cray/: amdclang.cmake
myenv/: spack.yaml
reproducers/: CMakeLists.txt  ReproducerArray.cpp  ReproducerManagedPtr.cpp
scripts/: check-license-info.sh  make_release_tarball.sh  update-copyright.sh
scripts/gitlab/: build_and_test.sh
scripts/spack_packages/: repo.yaml
scripts/spack_packages/camp/: package.py
scripts/spack_packages/care/: package.py
scripts/spack_packages/chai/: package.py
scripts/spack_packages/hip/: package.py
scripts/spack_packages/raja/: package.py
scripts/spack_packages/umpire/: camp_target_umpire_3.0.0.patch  cmake_version_check.patch  missing_header_for_numeric_limits.patch  package.py  std-filesystem-pr784.patch
src/: CMakeLists.txt
src/care/: Accessor.h  Array.h  Array2.h  ArrayView.h  AtomicAccessor.hpp  CHAICallback.cpp  CHAICallback.h  CHAIDataGetter.h  CMakeLists.txt  CUDAWatchpoint.h  Captures.hpp  CudaUmpireResource.h  Debug.h  DebugPlugin.cpp  DebugPlugin.h  DefaultArrayStorage.h  DefaultMacros.h  ExecutionSpace.cpp  ExecutionSpace.h  FOREACHMACRO.h  GPUMacros.h  GPUWatchpoint.h  KeyValueSorter.h  KeyValueSorter_decl.h  KeyValueSorter_impl.h  KeyValueSorter_inst.h  LoopFuser.cpp  LoopFuser.h  PluginData.cpp  PluginData.h  PointerTypes.h  ProfilePlugin.cpp  ProfilePlugin.h  RAJAPlugin.cpp  RAJAPlugin.h  RaceCheckAccessor.hpp  RestrictAccessor.hpp  Setup.h  SortFuser.h  StaleCheckAccessor.hpp  (+36 more)
src/care/detail/: test_utils.h
test/: Benchmarks.cpp  CMakeLists.txt  LoopFuserTest.cxx  TestAlgorithm.cpp  TestArray.cpp  TestArrayUtils.cpp  TestCudaUmpireResource.cpp  TestForall.cpp  TestKeyValueSorter.cpp  TestLoopFuser.cxx  TestManagedPtr.cpp  TestNestedMA.cpp  TestNumeric.cpp  TestScan.cpp  TestSortFuser.cxx  TestStaleCheckAccessor.cpp
tpl/: CMakeLists.txt  README  versions.txt
tpl/patches/chai/: CMakeLists.txt
tpl/patches/raja/: CMakeLists.txt  SetupPackages.cmake
tpl/patches/umpire/: CMakeLists.txt
